images bioestadistca gwsigma

--- a/app/views/encuesta/new.html.erb
+++ b/app/views/encuesta/new.html.erb
@@ -1,6 +1,14 @@
 <header>  
   <div class="row">
-    <img src="<%= asset_path 'minsalud1.png' %>">
+    <div class="col-md-4">
+      <img src="<%= asset_path 'minsalud1.png' %>">
+    </div>
+    <div class="col-md-4">
+      <img src="<%= asset_path 'bioestadistica.png' %>">
+    </div>
+    <div class="col-md-4">
+      <img src="<%= asset_path 'gss2.png' %>">
+    </div>
   </div>
 </header>
 <div class="container">
