change name in new encuesta

--- a/app/views/encuesta/new.html.erb
+++ b/app/views/encuesta/new.html.erb
@@ -20,7 +20,7 @@
     (ENC: la población a entrevistar, en ningún caso puede estar institucionalizada: Hospitales, geriátricos, cárceles, etc.)
     </div>
   <br>
-  <legend>(ENC: LEA PRESENTACIÓN)  Buenos días / tardes/ noches, mi nombre es ______ (ENC: DIGA SU NOMBRE COMPLETO), trabajo para Proyectamos Colombia SAS, Hemos sido contratados por el Ministerio de Salud y Protección Social para la aplicación de una encuesta de evaluación del servicio de las Empresas Promotoras de Salud (EPS) del país. Le agradezco su valiosa colaboración para responder las siguientes preguntas. La duración aproximada son 20 minutos. Sus respuestas serán totalmente confidenciales y serán utilizadas sólo con fines estadísticos.</legend>
+  <legend>(ENC: LEA PRESENTACIÓN)  Buenos días / tardes/ noches, mi nombre es ______ (ENC: DIGA SU NOMBRE COMPLETO), trabajo para Biga SigmaDos Colombia, Hemos sido contratados por el Ministerio de Salud y Protección Social para la aplicación de una encuesta de evaluación del servicio de las Empresas Promotoras de Salud (EPS) del país. Le agradezco su valiosa colaboración para responder las siguientes preguntas. La duración aproximada son 20 minutos. Sus respuestas serán totalmente confidenciales y serán utilizadas sólo con fines estadísticos.</legend>
   <br>
   <div class="alert alert-danger" role="alert">
     TODAS LAS INSTRUCCIONES EN ESTE FORMATO SON PARA EL ENCUESTADOR
