add fields and change the language, and change de form encuestum

--- a/app/views/encuesta/new.html.erb
+++ b/app/views/encuesta/new.html.erb
@@ -12,7 +12,7 @@
   </div>
 </header>
 <div class="container">
-  <h2 class="text-center">Estudio de evaluación de los servicios de las EPS por parte de los usuarios, en el régimen contributivo y subsidiado.  ENCUESTA A USUARIO</h2>
+  <h2 class="text-center">Estudio de evaluación de los servicios de las EPS por parte de los usuarios, en el régimen contributivo y subsidiado.</h2>
     <small class="form-text text-muted text-center">
         <p class="text-center">Confidencial: Los datos que se solicitan en este formulario son estrictamente confidenciales y en ningún caso tienen fines fiscales ni pueden utilizarse como prueba judicial  (Ley 79 del 20 de octubre de 1993, Art. 5)</p>
     </small>
