--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -3435,15 +3435,11 @@ ENC: (Aplique solo si en P10 respondió opción g "Entrega de medicamentos"), en
 
 <div>
     <%= f.label :nombre_encuestador, 'Nombre del encuestador' , id:"operativo"%>
-    <%= f.text_field :nombre_encuestador, {class: "form-control", id:"operativo"}%>
-</div>
-<div>
-    <%= f.label :cedula_encuestador, 'Cedula del encuestador' , id:"operativo"%>
-    <%= f.text_field :cedula_encuestador, {class: "form-control", id:"operativo"}%>
+    <%= f.select :nombre_encuestador, ["--","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40"],{}, {class: "form-control", id:"identicacion_caracterizacion_usuario"}%>
 </div>
 <div>
     <%= f.label :nombre_supervisor, 'Nombre del supervisor' , id:"operativo"%>
-    <%= f.select :nombre_supervisor, ["--","Angela Prieto","Lorena Guantiva","Eliana Galindo"],{}, {class: "form-control", id:"identicacion_caracterizacion_usuario"}%>
+    <%= f.select :nombre_supervisor, ["--","Angela Prieto","Cristina Fajardo","Dario Saldarriaga","Eliana Galindo","Francisco Mateus","Jimmy Bernal","Jose Luis Fuentes","Leydi Sierra","Lina Coronado","Lorena Guantiva","Martha Castellanos","Martin Barrientos","Milena Marulanda","Victor Torres","Yalila Goyeneche","Yaneth Sanchez"],{}, {class: "form-control", id:"identicacion_caracterizacion_usuario"}%>
 </div>
 <div>
     <%= f.label :nombre_coordinador, 'Nombre del coordinador' , id:"operativo"%>
