--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -70,7 +70,7 @@
   </div>
   <div class="field">
     <%= f.label :sexo, 'L8. Sexo' %>
-    <%= f.select :zona, ["Masculino","Femenino"],{:include_blank => true}, {class: "form-control", id:"sexo"}%>
+    <%= f.select :sexo, ["Masculino","Femenino"],{:include_blank => true}, {class: "form-control", id:"sexo"}%>
   </div>
   <div class="field">
     <div class="alert alert-primary" role="alert">
@@ -95,7 +95,7 @@
 </div>
 <div class="field">
     <%= f.label :F2, 'F2. ¿Pertenece a algún régimen especial (fuerza militar-Policía/ docentes Magisterio/ Ecopetrol)?' %>
-    <%= f.select :F1, ["Si","No"],{:include_blank => true}, {class: "form-control", id:"sexo"}%>
+    <%= f.select :F2, ["Si","No"],{:include_blank => true}, {class: "form-control", id:"sexo"}%>
 </div>
 <label>F3. ¿Además de la EPS usted cuenta actualmente con un plan de…?    (ENC: Lea cada opción, RM)</label>
 <div class="alert alert-primary" role="alert">
