--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -39,8 +39,8 @@
     <%= f.text_field :vivienda, class: 'form-control', placeholder:'Vivienda', id:'fechainicial' %>
   </div>
   <div class="field">
-    <%= f.label :hora, 'L3d. Hora' %>
-    <%= f.text_field :hora, class: 'form-control', placeholder:'Hora', id:'fechainicial' %>
+    <%= f.label :hora, 'L3d. Hogar' %>
+    <%= f.text_field :hora, class: 'form-control', placeholder:'Hogar', id:'fechainicial' %>
   </div>
   <div class="field">
     <%= f.label :id_persona_activa, 'L3f. Persona Efectiva' %>
