add hermano to parentesco

--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -3562,7 +3562,7 @@
       </div>
       <div>
           <%= f.label :pregunta60, '60. Parentesco del informante idóneo' , id:"identicacion_caracterizacion_usuario"%>
-          <%= f.select :pregunta60, ["Abuelo(a)","Cuñado(a)","Esposo(a)","Familiar lejano (3er grado)","Hijo(a)","Nieto(a)","Nuera/Yerno","Papa/Mama","Primo(a)","Sobrino(a)","Suegro(a)","Tio(a)"],{:include_blank => true}, {class: "form-control", id:"identicacion_caracterizacion_usuario"}%>
+          <%= f.select :pregunta60, ["Abuelo(a)","Cuñado(a)","Esposo(a)","Familiar lejano (3er grado)","Hermano(a)","Hijo(a)","Nieto(a)","Nuera/Yerno","Papa/Mama","Primo(a)","Sobrino(a)","Suegro(a)","Tio(a)"],{:include_blank => true}, {class: "form-control", id:"identicacion_caracterizacion_usuario"}%>
       </div>
      </div> 
     </div>
