--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -3620,7 +3620,7 @@
   <div class="col-md-12">
     <div class="row">
       <div class="col-md-12 text-center">
-        <a href="http://minsalud.sigmadosbioestadistica.com/"><input type="button" value="Guardar Sin internet" class="btn btn-primary btn-xl" id="Guardar_Sin_Internet" style="background-color: #15690f !important;height: 50px;background-image:  none !important;color: white;" /></a>
+        <%= f.submit "Guardar Encuesta" ,class:'btn btn-primary btn-lg' , :style => 'border-radius:5px;'%>
       </div>
     </div>
   </div>  
