add more estadisticas

--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -29,8 +29,157 @@
   	<label> <strong> L8. Sexo </strong> </label>
   	<%= pie_chart Encuestum.group(:sexo).count(:id) %>
   </div>
-  <div id="Sexo">
+  <div id="Pregunta1">
   	<label> <strong> 1. ¿A qué EPS se encuentra afiliado actualmente?  </strong> </label>
   	<%= bar_chart Encuestum.group(:pregunta1).count(:id) %>
   </div>
+  <div id="Pregunta1A">
+  	<label> <strong> 1A. ¿Cuánto tiempo lleva afiliado a esta EPS:  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta1A).count(:id) %>
+  </div>
+  <div id="Pregunta2">
+  	<label> <strong> 2. Cuando recibió el último servicio de salud, ¿Estaba usted afiliado a esta misma EPS?  </strong> </label>
+  	<%= pie_chart Encuestum.group(:pregunta2).count(:id) %>
+  </div>
+  <div id="Pregunta2A">
+  	<label> <strong> 2A. En que EPS estaba afiliado  </strong> </label>
+  	<%= bar_chart Encuestum.group(:pregunta2A).count(:id) %>
+  </div>
+  <div id="Pregunta2B">
+  	<label> <strong> 2B. Régimen  </strong> </label>
+  	<%= pie_chart Encuestum.group(:pregunta2B).count(:id) %>
+  </div>
+  <div id="Pregunta3">
+  	<label> <strong> 3. Qué tipo de afiliado es usted en la EPS?  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta3).count(:id) %>
+  </div>
+  <div id="Pregunta4">
+  	<label> <strong> 4. La última vez que se afilió a la seguridad social ¿Usted escogió libremente su EPS?  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta4).count(:id) %>
+  </div>
+  <div id="Pregunta5">
+  	<label> <strong> 5. ¿Cuál o cuáles fueron los motivos por los cuales se afilió a su EPS actual?  </strong> </label>
+  	<%= bar_chart Encuestum.group(:pregunta5).count(:id) %>
+  </div>  
+  <div id="Pregunta6">
+  	<label> <strong> 6. En general, ¿Cómo califica su estado de salud?  </strong> </label>
+  	<%= bar_chart Encuestum.group(:pregunta6).count(:id) %>
+  </div>
+<h3>7. Evalúe con qué frecuencia realiza usted cada acción que le voy a mencionar: </h3>
+  <div id="Pregunta7A">
+  	<label> <strong> 7. A. Preguntar por el costo de los servicios que recibió  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7A).count(:id) %>
+  </div>
+  <div id="Pregunta7B">
+  	<label> <strong> 7. B. Cotizar de conformidad con sus ingresos  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7B).count(:id) %>
+  </div> 
+  <div id="Pregunta7C">
+  	<label> <strong> 7. C. Cancelar con anticipación las citas solicitadas cuando no puede asistir </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7C).count(:id) %>
+  </div> 
+  <div id="Pregunta7D">
+  	<label> <strong> 7. D. Reportar a su EPS alguna novedad, (Como por ejemplo la actualización de datos personales, reportar el fallecimiento de algún miembro del núcleo familiar - entre otras.) </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7D).count(:id) %>
+  </div>     
+  <div id="Pregunta7E">
+  	<label> <strong> 7. E. Suministrar información veraz sobre sus síntomas y condición de salud para facilitar el diagnóstico  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7E).count(:id) %>
+  </div>  
+  <div id="Pregunta7F">
+  	<label> <strong> 7. F. Tomar medicamentos sin prescripción médica  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7F).count(:id) %>
+  </div>  
+  <div id="Pregunta7G">
+  	<label> <strong> 7. G. Seguir las recomendaciones dadas por el personal de salud  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7G).count(:id) %>
+  </div>  
+  <div id="Pregunta7H">
+  	<label> <strong> 7. H. Solicitar aclaración al personal de salud cuando tiene dudas sobre tratamientos, indicaciones, cuidados, fórmulas médicas, etc. </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7H).count(:id) %>
+  </div>  
+  <div id="Pregunta7I">
+  	<label> <strong> 7. I. Llegar puntualmente a las citas programadas  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7I).count(:id) %>
+  </div>  
+  <div id="Pregunta7J">
+  	<label> <strong> 7. J. Cumplir a cabalidad con el tratamiento médico ordenado  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7J).count(:id) %>
+  </div>  
+  <div id="Pregunta7K">
+  	<label> <strong> 7. K. Hacer ejercicio y/o alimentación balanceada </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7K).count(:id) %>
+  </div>  
+  <div id="Pregunta7L">
+  	<label> <strong> 7. L. Asistir a los controles médicos periódicos siguiendo las recomendaciones de su médico  </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7L).count(:id) %>
+  </div>  
+  <div id="Pregunta7M">
+  	<label> <strong> 7. M. Asistir a los programas de promoción de la salud y prevención de la enfermedad </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7M).count(:id) %>
+  </div>  
+  <div id="Pregunta7N">
+  	<label> <strong> 7. N. Atender a las recomendaciones recibidas en los programas de promoción de la salud y prevención de la enfermedad </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta7N).count(:id) %>
+  </div>  
+<h3>8. Pensando en la EPS ideal, ordene las siguientes características de acuerdo al grado de importancia que tiene para usted cada una; donde 1 es la más importante y 7 la menos importante</h3>  
+  <div id="Pregunta8A">
+  	<label> <strong> 8. A. El trato amable del personal administrativo: Oficinas de autorización, oficinas de atención al cliente, etc. </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta8A).count(:id) %>
+  </div>  
+  <div id="Pregunta8B">
+  	<label> <strong> 8. B. El trato amable del personal asistencial: médicos, enfermeras, terapeutas, etc. </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta8B).count(:id) %>
+  </div>  
+  <div id="Pregunta8C">
+  	<label> <strong> 8. C. Instalaciones físicas de la EPS: comodidad, completo, agradable </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta8C).count(:id) %>
+  </div>     
+  <div id="Pregunta8D">
+  	<label> <strong> 8. D. Su cercanía a hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta8D).count(:id) %>
+  </div> 
+  <div id="Pregunta8E">
+  	<label> <strong> 8. E. Tiempos de espera para la atención </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta8E).count(:id) %>
+  </div> 
+  <div id="Pregunta8F">
+  	<label> <strong> 8. F. Simplicidad y agilidad en los trámites </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta8F).count(:id) %>
+  </div> 
+  <div id="Pregunta8G">
+  	<label> <strong> 8. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta8G).count(:id) %>
+  </div> 
+ <h3>9. Pensando en su EPS, Qué tan satisfecho(a) esta usted frente a los siguientes servicios recibidos de su EPS durante los ÚLTIMOS 6 MESES</h3>
+  <div id="Pregunta9A">
+  	<label> <strong> 9. A. El trato amable del personal administrativo: Oficinas de autorización, oficinas de atención al cliente, etc. </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9A).count(:id) %>
+  </div>  
+  <div id="Pregunta9B">
+  	<label> <strong> 9. B. El trato amable del personal asistencial: médicos, enfermeras, terapeutas, etc. </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9B).count(:id) %>
+  </div>  
+  <div id="Pregunta9C">
+  	<label> <strong> 9. C. Instalaciones físicas de la EPS: comodidad, completo, agradable </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9C).count(:id) %>
+  </div>     
+  <div id="Pregunta9D">
+  	<label> <strong> 9. D. Su cercanía a hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9D).count(:id) %>
+  </div> 
+  <div id="Pregunta9E">
+  	<label> <strong> 9. E. Tiempos de espera para la atención </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9E).count(:id) %>
+  </div> 
+  <div id="Pregunta9F">
+  	<label> <strong> 9. F. Simplicidad y agilidad en los trámites </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9F).count(:id) %>
+  </div> 
+  <div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
+
+  
 </div>
