--- a/app/views/encuesta/new.html.erb
+++ b/app/views/encuesta/new.html.erb
@@ -4,7 +4,7 @@
       <img src="<%= asset_path 'bioestadistica.png' %>">
     </div>
     <div class="col-md-4">
-      <img src="<%= asset_path 'minsalud2.png' %>">
+      <img src="<%= asset_path 'logo_min_salud.png' %>">
     </div>
     <div class="col-md-4">
       <img src="<%= asset_path 'gss2.png' %>">
