--- a/app/views/estadisticas/index.html.erb
+++ b/app/views/estadisticas/index.html.erb
@@ -4,7 +4,7 @@
       <img src="<%= asset_path 'bioestadistica.png' %>">
     </div>
     <div class="col-md-4">
-      <img src="<%= asset_path 'minsalud2.png' %>">
+      <img src="<%= asset_path 'logo_min_salud.png' %>">
     </div>
     <div class="col-md-4">
       <img src="<%= asset_path 'gss2.png' %>">
@@ -180,6 +180,35 @@
   	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
   	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
   </div>
-
+<h3>En los últimos 6 meses ¿Cuáles de los siguientes servicios de salud ha utilizado usted a través de su EPS?</h3>
+	<div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
+  <div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
+  <div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
+  <div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
+  <div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
+  <div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
+  <div id="Pregunta9G">
+  	<label> <strong> 9. G. Cantidad de  hospitales y puestos de salud </strong> </label>
+  	<%= column_chart Encuestum.group(:pregunta9G).count(:id) %>
+  </div>
   
+
 </div>
