--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -78,7 +78,7 @@
     ENC:  Si menor 18, o mayor de 80 años, o incapacitado para informar, solicite acompañante a ultimo servicio (IDÓNEO)
     </div>
     <%= f.label :años, 'L9. Años' %>
-    <%= f.select :años, ["0","1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","23","24","25","26","27","28","29","30","31","32","33","34","35","36","37","38","39","40","41","42","43","44","45","46","47","48","49","50","51","52","53","54","55","56","57","58","59","60","61","62","63","64","65","66","67","68","69","70","71","72","73","74","75","76","77","78","79","80","81","82","83","84","85","86","87","88","89","90","91","92","93","94","95","96","97","98","99"],{:include_blank => true}, {class: "form-control", id:"años_l9"} %>
+    <%= f.select :años, ["50","51","52","53","54","55","56","57","58","59","60","61","62","63","64","65","66","67","68","69","70","71","72","73","74","75","76","77","78","79","80","81","82","83","84","85","86","87","88","89","90","91","92","93","94","95","96","97","98","99"],{:include_blank => true}, {class: "form-control", id:"años_l9"} %>
   </div>
 <br>
   <h2> II. FILTROS DE SELECCIÓN </h2>
