--- a/app/views/encuesta/_form.html.erb
+++ b/app/views/encuesta/_form.html.erb
@@ -410,7 +410,7 @@
       <%= f.label :pregunta8A, 'A. El trato amable del personal administrativo: Oficinas de autorización, oficinas de atención al cliente, etc.' , {style:"margin-right:30px;margin-left:13px;", id:"importan_satis_fact_serv"} %>
       </div>
       <div class="col-md-8 input-group">
-        <%= f.select :pregunta8A, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv"}%>
+        <%= f.select :pregunta8A, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv", style:"width:50px;"}%>
         <%= f.radio_button :pregunta9A, "Nada s." ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"}%><div>Nada sat.</div>
         <%= f.radio_button :pregunta9A, "Poco s.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Poco sat.</div>
         <%= f.radio_button :pregunta9A, "Ni s. Ni ins.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Ni sat. Ni ins. </div>
@@ -423,7 +423,7 @@
       <%= f.label :pregunta8B, 'B. El trato amable del personal asistencial: médicos, enfermeras, terapeutas, etc.' , {style:"margin-right:30px;margin-left:13px;" , id:"importan_satis_fact_serv"} %>
       </div>
       <div class="col-md-8 input-group">
-        <%= f.select :pregunta8B, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv"}%>
+        <%= f.select :pregunta8B, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv",style:"width:50px;"}%>
         <%= f.radio_button :pregunta9B, "Nada s." ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"}%><div>Nada sat.</div>
         <%= f.radio_button :pregunta9B, "Poco s.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Poco sat.</div>
         <%= f.radio_button :pregunta9B, "Ni s. Ni ins.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Ni sat. Ni ins. </div>
@@ -436,7 +436,7 @@
       <%= f.label :pregunta8C, 'C. Instalaciones físicas de la EPS: comodidad, completo, agradable' , {style:"margin-right:30px;margin-left:13px;", id:"importan_satis_fact_serv"} %>
       </div>
       <div class="col-md-8 input-group">
-        <%= f.select :pregunta8C, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv"}%>
+        <%= f.select :pregunta8C, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv",style:"width:50px;"}%>
         <%= f.radio_button :pregunta9C, "Nada s." ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"}%><div>Nada sat.</div>
         <%= f.radio_button :pregunta9C, "Poco s.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Poco sat.</div>
         <%= f.radio_button :pregunta9C, "Ni s. Ni ins.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Ni sat. Ni ins. </div>
@@ -462,7 +462,7 @@
       <%= f.label :pregunta8E, 'E. Tiempos de espera para la atención' , {style:"margin-right:30px;margin-left:13px;", id:"importan_satis_fact_serv"} %>
       </div>
       <div class="col-md-8 input-group">
-        <%= f.select :pregunta8E, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv"}%>
+        <%= f.select :pregunta8E, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv",style:"width:50px;"}%>
         <%= f.radio_button :pregunta9E, "Nada s." ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"}%><div>Nada sat.</div>
         <%= f.radio_button :pregunta9E, "Poco s.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Poco sat.</div>
         <%= f.radio_button :pregunta9E, "Ni s. Ni ins.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Ni sat. Ni ins. </div>
@@ -475,7 +475,7 @@
       <%= f.label :pregunta8F, 'F. Simplicidad y agilidad en los trámites' , {style:"margin-right:30px;margin-left:13px;", id:"importan_satis_fact_serv"} %>
       </div>
       <div class="col-md-8 input-group">
-        <%= f.select :pregunta8F, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv"}%>
+        <%= f.select :pregunta8F, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv",style:"width:50px;"}%>
         <%= f.radio_button :pregunta9F, "Nada s." ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"}%><div>Nada sat.</div>
         <%= f.radio_button :pregunta9F, "Poco s.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Poco sat.</div>
         <%= f.radio_button :pregunta9F, "Ni s. Ni ins.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Ni sat. Ni ins. </div>
@@ -488,7 +488,7 @@
       <%= f.label :pregunta8G, 'G. Cantidad de  hospitales y puestos de salud' , {style:"margin-right:30px;margin-left:13px;", id:"importan_satis_fact_serv"} %>
       </div>
       <div class="col-md-8 input-group">
-        <%= f.select :pregunta8G, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv"}%>
+        <%= f.select :pregunta8G, ["1","2","3","4","5","6","7"],{:include_blank => true}, {class: "form-control", id:"importan_satis_fact_serv",style:"width:50px;"}%>
         <%= f.radio_button :pregunta9G, "Nada s." ,{class: "form-control", style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"}%><div>Nada sat.</div>
         <%= f.radio_button :pregunta9G, "Poco s.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Poco sat.</div>
         <%= f.radio_button :pregunta9G, "Ni s. Ni ins.", {class: "form-control",style:"margin-right: 5px; margin-left: 5px; width:2%;", id:"importan_satis_fact_serv"} %><div>Ni sat. Ni ins. </div>
